--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,5 @@
 {
   "projects": {
-    "default": "netflix-clone-39dff",
-    "N": "netflix-clone-c50b9"
+    "default": "netflix-clone-c50b9"
   }
 }
